--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-i
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Título do Manual</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Título do Manual</h1>
+  </header>
+  <main>
+    <section>
+      <h2>Introdução</h2>
+      <p>Conteúdo da introdução...</p>
+    </section>
+    <section>
+      <h2>Capítulo 1</h2>
+      <p>Conteúdo do capítulo 1...</p>
+    </section>
+    </main>
+  <footer>
+    <p>Copyright &copy; 2024</p>
+  </footer>
+</body>
+</html>
